--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,8 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
-      <version>${spring.version}</version>
+      <version>5.3.14</version>
     </dependency>
-
     <!-- Servlet API -->
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -48,13 +47,18 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-bom</artifactId>
+      <version>2.20.0</version>
+    </dependency>
+
     <!-- JPA -->
     <dependency>
       <groupId>javax.persistence</groupId>
       <artifactId>javax.persistence-api</artifactId>
       <version>2.2</version>
     </dependency>
-
     <!-- Thymeleaf -->
     <dependency>
       <groupId>org.thymeleaf</groupId>
@@ -62,25 +66,25 @@
       <version>${thymeleaf.version}</version>
     </dependency>
 
+
     <!-- Spring ORM -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-orm</artifactId>
       <version>${spring.version}</version>
     </dependency>
-
     <!-- Logging -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>1.7.36</version>
     </dependency>
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
       <version>2.0.9</version>
     </dependency>
-
     <!-- MySQL Connector -->
     <dependency>
       <groupId>mysql</groupId>
@@ -88,17 +92,13 @@
       <version>8.0.25</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.hibernate.javax.persistence</groupId>
-      <artifactId>hibernate-jpa-2.1-api</artifactId>
-      <version>1.0.2.Final</version>
-    </dependency>
 
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>5.6.3.Final</version>
+      <version>5.6.15.Final</version>
     </dependency>
+
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-entitymanager</artifactId>
@@ -109,7 +109,7 @@
   </dependencies>
 
   <build>
-    <finalName>Spring_MVC</finalName>
+    <finalName>spring_mvc</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
