--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
   <properties>
     <spring.version>5.3.14</spring.version>
-    <thymeleaf.version>3.0.14.RELEASE</thymeleaf.version>
+    <thymeleaf.version>3.1.3.RELEASE</thymeleaf.version>
   </properties>
 
   <dependencies>
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
-      <version>5.3.14</version>
+      <version>${spring.version}</version>
     </dependency>
     <!-- Servlet API -->
     <dependency>
@@ -59,7 +59,6 @@
       <artifactId>thymeleaf-spring5</artifactId>
       <version>${thymeleaf.version}</version>
     </dependency>
-
 
     <!-- Spring ORM -->
     <dependency>
@@ -110,8 +109,7 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>3.3.2</version>
         <configuration>
-          <warSourceDirectory>src/webapp</warSourceDirectory>
-          <warName>spring_mvc</warName>
+          <warSourceDirectory>src/main/webapp</warSourceDirectory>
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
